# TSERDJEBI_CPLUS

./: .gitignore  CMakeLists.txt
cmake/: catch2.cmake  std.cmake
src/: exo1.cppm  exo2.cppm  exo3.cppm  exo4.cppm  exo5.cppm  exo6.cppm  exo7.cppm  exo8.cppm  main.cpp
tests/: exo1.cpp  exo2.cpp  exo3.cpp  exo4.cpp  exo5.cpp  exo6.cpp  exo7.cpp  exo8.cpp  exo9.cpp
